--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@aws-sdk/client-glue": "^3.451.0",
     "@aws-sdk/client-lambda": "^3.451.0",
     "@aws-sdk/client-opensearch": "^3.451.0",
+    "@aws-sdk/lib-storage": "^3.451.0",
     "@aws-sdk/client-route-53": "^3.451.0",
     "@aws-sdk/client-s3": "^3.451.0",
     "@aws-sdk/client-sqs": "^3.451.0",
