--- a/pdf-generator/package.json
+++ b/pdf-generator/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "CC0-1.0",
   "dependencies": {
+    "@aws-sdk/client-lambda": "^3.495.0",
     "@aws-sdk/client-s3": "^3.490.0"
   },
   "devDependencies": {
