--- a/pdf-generator/app/package.json
+++ b/pdf-generator/app/package.json
@@ -10,28 +10,28 @@
   "author": "",
   "license": "CC0-1.0",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.490.0",
-    "@babel/preset-env": "^7.23.8",
-    "@babel/preset-react": "^7.23.3",
-    "@sparticuz/chromium": "^119.0.2",
-    "pdf-lib": "^1.17.1",
-    "puppeteer-core": "^21.7.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sass": "^1.69.7",
-    "uuid": "^9.0.1",
-    "zod": "^3.22.4"
+    "@aws-sdk/client-s3": "3.490.0",
+    "@babel/preset-env": "7.23.8",
+    "@babel/preset-react": "7.23.3",
+    "@sparticuz/chromium": "119.0.2",
+    "pdf-lib": "1.17.1",
+    "puppeteer-core": "21.7.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sass": "1.69.7",
+    "uuid": "9.0.1",
+    "zod": "3.22.4"
   },
   "devDependencies": {
-    "@babel/register": "^7.23.7",
-    "@tsconfig/node18": "^18.2.2",
-    "@types/babel__register": "^7.17.3",
-    "@types/node": "^20.11.5",
-    "@types/react": "^18.2.48",
-    "@types/react-dom": "^18.2.18",
-    "@types/uuid": "^9.0.7",
-    "dotenv": "^16.3.1",
-    "typescript": "^5.3.3",
-    "vitest": "^1.2.0"
+    "@babel/register": "7.23.7",
+    "@tsconfig/node18": "18.2.2",
+    "@types/babel__register": "7.17.3",
+    "@types/node": "20.11.5",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
+    "@types/uuid": "9.0.7",
+    "dotenv": "16.3.1",
+    "typescript": "5.3.3",
+    "vitest": "1.2.0"
   }
 }
