--- a/pdf-generator/package.json
+++ b/pdf-generator/package.json
@@ -15,14 +15,14 @@
   "author": "",
   "license": "CC0-1.0",
   "dependencies": {
-    "@aws-sdk/client-lambda": "^3.495.0",
-    "@aws-sdk/client-s3": "^3.490.0"
+    "@aws-sdk/client-lambda": "3.495.0",
+    "@aws-sdk/client-s3": "3.490.0"
   },
   "devDependencies": {
     "aws-cdk-lib": "2.110.1",
     "constructs": "10.3.0",
     "sst": "2.39.6",
-    "tsx": "^4.7.0",
-    "vitest": "^1.2.0"
+    "tsx": "4.7.0",
+    "vitest": "1.2.0"
   }
 }
