--- a/pdf-generator/Dockerfile
+++ b/pdf-generator/Dockerfile
@@ -2,6 +2,7 @@ FROM public.ecr.aws/lambda/nodejs:18
 
 WORKDIR ${LAMBDA_TASK_ROOT}
 
+RUN echo "HELLO"
 COPY package.json ${LAMBDA_TASK_ROOT}
 COPY package-lock.json ${LAMBDA_TASK_ROOT}
 
