--- a/pdf-generator/package.json
+++ b/pdf-generator/package.json
@@ -5,24 +5,44 @@
   "main": "index.js",
   "scripts": {
     "test:integration": "vitest test/integration.test.ts",
-    "build": "./build.sh",
+    "build": "DOCKER_BUILDKIT=0 docker build --progress=plain --platform linux/amd64 -t docker-image:pdf-generator .",
     "deploy": "sst deploy --stage prod",
     "local": "docker run --env AWS_ACCESS_KEY_ID=S3RVER --env AWS_SECRET_ACCESS_KEY=S3RVER --env \"S3_ENDPOINT=http://10.0.0.96:9000\" --platform linux/amd64 -p 8333:8080 docker-image:pdf-generator",
     "compile": "tsc",
-    "invoke": "tsx invoke.ts"
+    "invoke": "tsx invoke.ts",
+    "loadtest": "LOCAL=true tsx loadtests/run.ts"
   },
   "keywords": [],
   "author": "",
   "license": "CC0-1.0",
   "dependencies": {
     "@aws-sdk/client-lambda": "3.495.0",
-    "@aws-sdk/client-s3": "3.490.0"
+    "@aws-sdk/client-s3": "3.490.0",
+    "@babel/preset-env": "7.23.8",
+    "@babel/preset-react": "7.23.3",
+    "@sparticuz/chromium": "119.0.2",
+    "pdf-lib": "1.17.1",
+    "puppeteer-core": "21.7.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "sass": "1.69.7",
+    "uuid": "9.0.1",
+    "zod": "3.22.4"
   },
   "devDependencies": {
+    "@babel/register": "7.23.7",
+    "@tsconfig/node18": "18.2.2",
+    "@types/babel__register": "7.17.3",
+    "@types/node": "20.11.5",
+    "@types/react": "18.2.48",
+    "@types/react-dom": "18.2.18",
+    "@types/uuid": "9.0.7",
     "aws-cdk-lib": "2.110.1",
     "constructs": "10.3.0",
+    "dotenv": "16.3.1",
     "sst": "2.39.6",
     "tsx": "4.7.0",
+    "typescript": "5.3.3",
     "vitest": "1.2.0"
   }
 }
