--- a/package.json
+++ b/package.json
@@ -266,6 +266,7 @@
     "@babel/preset-typescript": "7.23.3",
     "@babel/register": "7.23.7",
     "@faker-js/faker": "8.4.1",
+    "@hyrious/esbuild-plugin-commonjs": "^0.2.4",
     "@miovision/eslint-plugin-disallow-date": "2.0.0",
     "@types/aws-lambda": "8.10.133",
     "@types/jest": "29.5.12",
@@ -358,8 +359,8 @@
     "react-test-renderer": "18.2.0",
     "readline": "1.3.0",
     "s3rver": "github:20minutes/s3rver",
-    "sass-loader": "14.1.0",
     "sass": "1.70.0",
+    "sass-loader": "14.1.0",
     "shuffle-seed": "1.1.6",
     "stream-browserify": "3.0.0",
     "style-loader": "3.3.4",
