--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@18f/us-federal-holidays": "4.0.0",
-    "@aws-crypto/sha256-browser": "^5.2.0",
+    "@aws-crypto/sha256-browser": "5.2.0",
     "@aws-sdk/client-cloudwatch": "3.540.0",
     "@aws-sdk/client-cognito-identity-provider": "3.540.0",
     "@aws-sdk/client-dynamodb": "3.540.0",
@@ -27,46 +27,46 @@
     "@aws-sdk/protocol-http": "3.374.0",
     "@aws-sdk/signature-v4": "3.374.0",
     "@aws-sdk/util-dynamodb": "3.540.0",
-    "@cerebral/react": "^4.2.1",
+    "@cerebral/react": "4.2.1",
     "@fortawesome/fontawesome-svg-core": "~1.2.36",
     "@fortawesome/free-regular-svg-icons": "5.15.4",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/react-fontawesome": "0.2.0",
-    "@joi/date": "^2.1.0",
-    "@opensearch-project/opensearch": "^2.5.0",
+    "@joi/date": "2.1.0",
+    "@opensearch-project/opensearch": "2.6.0",
     "@sparticuz/chromium": "112.0.2",
     "@uswds/uswds": "^3.7.1",
-    "archiver": "^7.0.0",
-    "aws-lambda": "^1.0.7",
-    "aws-sdk": "^2.1573.0",
-    "aws-xray-sdk": "^3.5.4",
-    "axios": "^1.6.7",
-    "broadcast-channel": "^7.0.0",
-    "canvas": "^2.11.2",
-    "cerebral": "^5.2.1",
-    "classnames": "^2.5.1",
-    "cookie": "^0.6.0",
-    "core-js": "^3.36.0",
-    "cors": "^2.8.5",
-    "csv-stringify": "^6.4.6",
-    "deep-freeze": "^0.0.1",
-    "diff-arrays-of-objects": "^1.1.9",
-    "english-ordinals": "^3.3.0",
+    "archiver": "7.0.1",
+    "aws-lambda": "1.0.7",
+    "aws-sdk": "2.1584.0",
+    "aws-xray-sdk": "3.5.4",
+    "axios": "1.6.8",
+    "broadcast-channel": "7.0.0",
+    "canvas": "2.11.2",
+    "cerebral": "5.2.1",
+    "classnames": "2.5.1",
+    "cookie": "0.6.0",
+    "core-js": "3.36.1",
+    "cors": "2.8.5",
+    "csv-stringify": "6.4.6",
+    "deep-freeze": "0.0.1",
+    "diff-arrays-of-objects": "1.1.9",
+    "english-ordinals": "3.3.0",
     "express": "4.19.2",
     "form-data": "^4.0.0",
-    "image-blob-reduce": "^4.1.0",
-    "joi": "^17.12.2",
-    "jsonwebtoken": "^9.0.2",
-    "jwk-to-pem": "^2.0.5",
-    "lodash": "^4.17.21",
-    "logform": "^2.6.0",
-    "luxon": "^3.4.4",
-    "moize": "^6.1.6",
-    "parse-full-name": "^1.2.6",
-    "pdf-lib": "^1.17.1",
+    "image-blob-reduce": "4.1.0",
+    "joi": "17.12.2",
+    "jsonwebtoken": "9.0.2",
+    "jwk-to-pem": "2.0.5",
+    "lodash": "4.17.21",
+    "logform": "2.6.0",
+    "luxon": "3.4.4",
+    "moize": "6.1.6",
+    "parse-full-name": "1.2.6",
+    "pdf-lib": "1.17.1",
     "pdfjs-dist": "2.16.105",
-    "process": "^0.11.10",
-    "promise-retry": "^2.0.1",
+    "process": "0.11.10",
+    "promise-retry": "2.0.1",
     "pug": "^3.0.2",
     "qs": "^6.12.0",
     "quill-delta-to-html": "^0.12.1",
