WIP: continue to pin packages

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@aws-sdk/signature-v4": "3.374.0",
     "@aws-sdk/util-dynamodb": "3.540.0",
     "@cerebral/react": "4.2.1",
-    "@fortawesome/fontawesome-svg-core": "~1.2.36",
+    "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-regular-svg-icons": "5.15.4",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
     "@fortawesome/react-fontawesome": "0.2.0",
@@ -53,7 +53,7 @@
     "diff-arrays-of-objects": "1.1.9",
     "english-ordinals": "3.3.0",
     "express": "4.19.2",
-    "form-data": "^4.0.0",
+    "form-data": "4.0.0",
     "image-blob-reduce": "4.1.0",
     "joi": "17.12.2",
     "jsonwebtoken": "9.0.2",
@@ -67,27 +67,27 @@
     "pdfjs-dist": "2.16.105",
     "process": "0.11.10",
     "promise-retry": "2.0.1",
-    "pug": "^3.0.2",
-    "qs": "^6.12.0",
-    "quill-delta-to-html": "^0.12.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-idle-timer": "^5.7.2",
-    "react-number-format": "^5.3.3",
-    "react-paginate": "^8.2.0",
-    "react-quill": "^2.0.0",
+    "pug": "3.0.2",
+    "qs": "6.12.0",
+    "quill-delta-to-html": "0.12.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-idle-timer": "5.7.2",
+    "react-number-format": "5.3.4",
+    "react-paginate": "8.2.0",
+    "react-quill": "2.0.0",
     "react-responsive": "^9.0.2",
     "react-select": "^5.8.0",
     "riot-route": "^3.1.4",
     "s3-files": "3.0.0",
-    "sanitize-filename": "^1.6.3",
-    "servor": "^4.0.2",
-    "supports-color": "^9.4.0",
-    "tmp": "^0.2.3",
-    "util": "^0.12.5",
-    "uuid": "^9.0.1",
-    "websocket": "^1.0.34",
-    "wicg-inert": "^3.1.2",
+    "sanitize-filename": "1.6.3",
+    "servor": "4.0.2",
+    "supports-color": "9.4.0",
+    "tmp": "0.2.3",
+    "util": "0.12.5",
+    "uuid": "9.0.1",
+    "websocket": "1.0.34",
+    "wicg-inert": "3.1.2",
     "winston": "3.13.0"
   },
   "scripts": {
