--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "@joi/date": "2.1.0",
     "@opensearch-project/opensearch": "2.6.0",
     "@sparticuz/chromium": "112.0.2",
-    "@uswds/uswds": "^3.7.1",
+    "@uswds/uswds": "3.7.1",
     "archiver": "7.0.1",
     "aws-lambda": "1.0.7",
     "aws-sdk": "2.1584.0",
@@ -76,9 +76,9 @@
     "react-number-format": "5.3.4",
     "react-paginate": "8.2.0",
     "react-quill": "2.0.0",
-    "react-responsive": "^9.0.2",
-    "react-select": "^5.8.0",
-    "riot-route": "^3.1.4",
+    "react-responsive": "10.0.0",
+    "react-select": "5.8.0",
+    "riot-route": "3.1.4",
     "s3-files": "3.0.0",
     "sanitize-filename": "1.6.3",
     "servor": "4.0.2",
