--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@fortawesome/react-fontawesome": "0.2.0",
     "@joi/date": "2.1.0",
     "@opensearch-project/opensearch": "2.7.0",
+    "@sentry/react": "^7.112.2",
     "@sparticuz/chromium": "123.0.1",
     "@uswds/uswds": "3.7.1",
     "archiver": "7.0.1",
