--- a/package.json
+++ b/package.json
@@ -140,7 +140,7 @@
     "deploy:switch-colors-cron": "cd web-api/terraform/applyables/switch-colors-cron && ../../bin/deploy-switch-colors-cron.sh",
     "deploy:ui:files": "./web-client/deploy-ui.sh",
     "deploy:wait-for-workflow-cron": "cd web-api/terraform/applyables/wait-for-workflow && ../../bin/deploy-wait-for-workflow-cron.sh",
-    "destroy:api": "cd web-api/terraform/main && ../bin/destroy-app.sh",
+    "destroy:allColors": "cd web-api/terraform/applyables/allColors && ../../bin/destroy-app-all-colors.sh",
     "destroy:client": "cd web-client/terraform/main && ../bin/destroy-app.sh",
     "destroy:env": "npx ts-node --transpile-only env-destroy-utils/destroyEnvironment.ts",
     "destroy:glue-cron": "cd web-api/terraform/applyables/glue-cron && ../../bin/destroy-glue-cron.sh",
