--- a/package.json
+++ b/package.json
@@ -140,6 +140,8 @@
     "deploy:switch-colors-cron": "cd web-api/terraform/applyables/switch-colors-cron && ../../bin/deploy-switch-colors-cron.sh",
     "deploy:ui:files": "./web-client/deploy-ui.sh",
     "deploy:wait-for-workflow-cron": "cd web-api/terraform/applyables/wait-for-workflow && ../../bin/deploy-wait-for-workflow-cron.sh",
+    "destroy:green": "cd web-api/terraform/applyables/green && COLOR=green ../../bin/destroy-app-color.sh",
+    "destroy:blue": "cd web-api/terraform/applyables/blue && COLOR=blue ../../bin/destroy-app-color.sh",
     "destroy:allColors": "cd web-api/terraform/applyables/allColors && ../../bin/destroy-app-all-colors.sh",
     "destroy:client": "cd web-client/terraform/main && ../bin/destroy-app.sh",
     "destroy:env": "npx ts-node --transpile-only env-destroy-utils/destroyEnvironment.ts",
