--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@joi/date": "2.1.1",
     "@opensearch-project/opensearch": "2.10.0",
     "@sparticuz/chromium": "123.0.1",
+    "@types/node-os-utils": "^1.3.4",
     "@uswds/uswds": "3.7.1",
     "aws-lambda": "1.0.7",
     "aws-sdk": "2.1645.0",
@@ -73,6 +74,7 @@
     "logform": "2.6.0",
     "luxon": "3.4.4",
     "moize": "6.1.6",
+    "node-os-utils": "^1.3.7",
     "parse-full-name": "1.2.6",
     "pdf-lib": "1.17.1",
     "pdfjs-dist": "2.16.105",
