--- a/package.json
+++ b/package.json
@@ -11,31 +11,31 @@
   "dependencies": {
     "@18f/us-federal-holidays": "4.0.0",
     "@aws-crypto/sha256-browser": "5.2.0",
-    "@aws-sdk/client-apigatewaymanagementapi": "3.616.0",
-    "@aws-sdk/client-api-gateway": "3.616.0",
-    "@aws-sdk/client-apigatewayv2": "3.616.0",
-    "@aws-sdk/client-cloudfront": "3.616.0",
-    "@aws-sdk/client-cloudwatch": "3.616.0",
+    "@aws-sdk/client-api-gateway": "^3.621.0",
+    "@aws-sdk/client-apigatewaymanagementapi": "^3.621.0",
+    "@aws-sdk/client-apigatewayv2": "^3.621.0",
+    "@aws-sdk/client-cloudfront": "^3.621.0",
+    "@aws-sdk/client-cloudwatch": "^3.621.0",
     "@aws-sdk/client-cognito-identity-provider": "3.616.0",
     "@aws-sdk/client-dynamodb": "3.619.0",
     "@aws-sdk/client-dynamodb-streams": "3.616.0",
-    "@aws-sdk/client-glue": "3.616.0",
-    "@aws-sdk/client-lambda": "3.616.0",
-    "@aws-sdk/client-opensearch": "3.616.0",
-    "@aws-sdk/client-route-53": "3.616.0",
-    "@aws-sdk/client-s3": "3.617.0",
-    "@aws-sdk/client-ses": "3.616.0",
-    "@aws-sdk/client-sns": "3.616.0",
-    "@aws-sdk/client-sqs": "3.616.0",
-    "@aws-sdk/client-ssm": "3.616.0",
-    "@aws-sdk/cloudfront-signer": "3.609.0",
-    "@aws-sdk/credential-provider-node": "3.616.0",
+    "@aws-sdk/client-glue": "^3.621.0",
+    "@aws-sdk/client-lambda": "^3.621.0",
+    "@aws-sdk/client-opensearch": "^3.621.0",
+    "@aws-sdk/client-route-53": "^3.621.0",
+    "@aws-sdk/client-s3": "^3.621.0",
+    "@aws-sdk/client-ses": "^3.621.0",
+    "@aws-sdk/client-sns": "^3.621.0",
+    "@aws-sdk/client-sqs": "^3.621.0",
+    "@aws-sdk/client-ssm": "^3.621.0",
+    "@aws-sdk/cloudfront-signer": "^3.621.0",
+    "@aws-sdk/credential-provider-node": "^3.621.0",
     "@aws-sdk/lib-dynamodb": "3.619.0",
-    "@aws-sdk/lib-storage": "3.617.0",
+    "@aws-sdk/lib-storage": "^3.621.0",
     "@aws-sdk/node-http-handler": "3.374.0",
     "@aws-sdk/protocol-http": "3.374.0",
-    "@aws-sdk/s3-presigned-post": "3.617.0",
-    "@aws-sdk/s3-request-presigner": "3.617.0",
+    "@aws-sdk/s3-presigned-post": "^3.621.0",
+    "@aws-sdk/s3-request-presigner": "^3.621.0",
     "@aws-sdk/signature-v4": "3.374.0",
     "@aws-sdk/util-dynamodb": "3.619.0",
     "@cerebral/react": "4.2.1",
@@ -245,12 +245,12 @@
     "ejs": "3.1.10"
   },
   "devDependencies": {
-    "@aws-sdk/client-iam": "3.616.0",
-    "@aws-sdk/client-secrets-manager": "3.616.0",
+    "@aws-sdk/client-iam": "^3.621.0",
+    "@aws-sdk/client-secrets-manager": "^3.621.0",
     "@babel/cli": "7.24.8",
-    "@babel/core": "7.24.9",
-    "@babel/eslint-parser": "7.24.8",
-    "@babel/preset-env": "7.24.8",
+    "@babel/core": "^7.25.2",
+    "@babel/eslint-parser": "^7.25.1",
+    "@babel/preset-env": "^7.25.3",
     "@babel/preset-react": "7.24.7",
     "@babel/preset-typescript": "7.24.7",
     "@babel/register": "7.24.6",
@@ -260,7 +260,7 @@
     "@types/jest": "29.5.12",
     "@types/lodash": "4.17.7",
     "@types/luxon": "3.4.2",
-    "@types/node": "20.14.12",
+    "@types/node": "^22.0.2",
     "@types/promise-retry": "1.1.6",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -268,7 +268,7 @@
     "@types/uuid": "10.0.0",
     "@types/websocket": "1.0.10",
     "@typescript-eslint/eslint-plugin": "7.17.0",
-    "@typescript-eslint/parser": "7.17.0",
+    "@typescript-eslint/parser": "^8.0.0",
     "@vendia/serverless-express": "4.12.6",
     "ajv": "8.17.1",
     "artillery": "2.0.18",
